# turbopy

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_2D.md  NOTES.md  README.md  environment.yml  pyproject.toml
.archive/sphinx-docs-version-dropdown-sidebar-2026-07-23/: spec.md
.archive/turbopy-doc-coverage-docstring-improvements-2026-07-23/: changes.md  review.md  spec.md  test-results.md
.claude/agents/: code-explorer.md  coder.md  planner-ecc.md  planner.md  python-reviewer.md  reviewer.md  tdd-guide.md  tester.md
.claude/commands/: ship.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.github/prompts/: build-fix.prompt.md  plan.prompt.md  security-review.prompt.md  tdd.prompt.md
.github/workflows/: tests.yml
.history/: .gitignore_20260331221959
.pipeline/: changes.md  review.md  spec.md  test-results.md
docs/: api.rst  clock.rst  compute_tools.rst  conf.py  diagnostics.rst  dynamic_factory.rst  getting_started.rst  grids.rst  index.rst  input_files.rst  overview.rst  physics_modules.rst  sharing_data.rst  simulation_lifecycle.rst
hooks/: README.md
tests/: test_computetools.py  test_core.py  test_diagnostics.py
tests/fixtures/block_on_spring/: block_on_spring.py  block_on_spring_2d_cartesian.py
tests/fixtures/particle_in_field/: particle_in_field_2d_cartesian.py
turbopy/: __init__.py  __version__.py  computetools.py  constructors.py  core.py  diagnostics.py
